Update font and colour variables

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ permalink: pretty
 theme: jekyll_patternbot
 
 patternbot:
-  font_url: "https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,700|Source+Code+Pro:400,700"
+  font_url: "link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700|Playfair+Display:400,700,900,900i&display=swap"
