--- a/_config.yml
+++ b/_config.yml
@@ -3,20 +3,21 @@ theme: jekyll_patternbot
 
 patternbot:
   title: "ǦoneWick"
-  description:
+  description: |
     Online shop for authentic home decor pieces.
   font_url: "https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Playfair+Display:400,700&display=swap"
   colors:
-    background: "--color-primary-light"
+    sidebar: "--color-primary-dark"
     accent: "--color-secondary"
+    background: "--color-primary-light"
     patterns:
-      brand.logos:"--color-primary"
+      brand.logos: "--color-secondary-light"
   rationales:
-    typefaces.primary:
+    typefaces.primary: |
       Montserrat was selected because it is beautiful open font that creates space and calmness. The versatile typeface is to be used for all body copy in most cases and some smaller headings, buttons and cards.
-    typefaces.secondary:
+    typefaces.secondary: |
       Playfair Display was selected due to its timelessness and contrast. It is to be used for most headings in banners and product pages.
-    colors.primary:
+    colors.primary: |
       The primary colours contrast warm and cool tones of fire and wind. They should be used for headings, text, buttons and highlights.
-    colors.secondary:
+    colors.secondary: |
       The secondary colours are soft and light. They should be used for most backgrounds and some text.
