Create checkout card and start form code

--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -1,4 +1,4 @@
-title: "Images & Cards"
+title: "Cards"
 description: |
   Cards should be used in situations where specific information or elements are to be grouped together.
 
