--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,6 @@ patternbot:
     typefaces.secondary: |
       Playfair Display was selected due to its timelessness and contrast. It is to be used for most headings in banners and product pages.
     colors.primary: |
-      The primary colours contrast warm and cool tones of fire and wind. They should be used for headings, text, buttons and highlights.
+      The primary colours consist of cool tones of water and wind. They should be used for headings, text, buttons and highlights. The light colours should be used for most backgrounds.
     colors.secondary: |
-      The secondary colours are soft and light. They should be used for most backgrounds and some text.
+      The secondary colours contrast the primary palette with warm tones of fire and wood. The rust colour should be used in relation to viewing and adding products to the cart. The light colours can be used for most backgrounds and some text.
