Add a form submission button, and fix the footer styles
The form CSS has been adjusted so it (mostly) works; the page loads with the form errors showing, but they disappear as the user adds content into them.

Let me know if there's anything else I can do to help :)

--- a/_patterns/buttons/config.yml
+++ b/_patterns/buttons/config.yml
@@ -47,3 +47,11 @@ patterns:
       - name: url
         type: url
         example: "/checkout/"
+  submit:
+    title: "Form Submission Button"
+    description: |
+      This button submits the form on the checkout page.
+    fields:
+      - name: text
+        type: string
+        example: "Do it"
